# scintix-p4-playing-doom

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  pytest_doom_p4.py  sdkconfig.defaults  sdkconfig.no_psram_backup
components/doomgeneric/: CMakeLists.txt
components/doomgeneric/src/: audio_doom.h  i_sound.c
components/esp32_p4_function_ev_board_noglib/: README.md  esp32_p4_function_ev_board.c  idf_component.yml
components/esp32_p4_function_ev_board_noglib/include/bsp/: esp32_p4_function_ev_board.h
main/: CMakeLists.txt  audio_doom.c  doom_agent.c  doom_agent.h  doom_p4_main.c  doom_port.c  doom_port.h  idf_component.yml  panel_display.c  panel_display.h  usb_gamepad.c  usb_gamepad.h
tools/: README.md  agent_client.py  doom_mcp_server.py  requirements.txt
